[package]
name = "st-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = [ "full" ] }
jack = { git = "https://github.com/RustAudio/rust-jack", branch = "main" }
crossbeam-channel = "0.5.6"
st_lib = { version = "0.1", path="../st-lib" }
wmidi = "4.0.6"
