[package]
name = "st-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = [ "full" ] }
jack = { git = "https://github.com/RustAudio/rust-jack", branch = "main" }
crossbeam-channel = "0.5.6"
st_lib = { version = "0.1", path="../st-lib" }
wmidi = "4.0.6"
st_sync = { version = "0.1", path="../st-sync" }
rosc = "~0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wav = "1.0"