[package]
name = "st-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = [ "full" ] }
crossbeam-channel = "0.5.6"
crossbeam = "0.8.2"
wmidi = "4.0.6"
rosc = "~0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hound = "3.5.0"
rubato = "0.12.0"

[profile.release]
opt-level = 2